# google-oauth-axum-starter

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: docker-image.yml  rust.yml
.sqlx/: query-0834a854675575829fc746f1a8462d1c02db834f9f94d3a90b5fe58cd4f6ed90.json  query-2487346f1ed40518d7942f83bccb1d63471375271620b55fa7a8b58314057b36.json  query-ba3ae04bd8ceae08141cb81b9653a9677f776f2f20f286d2f81bf57129ff1170.json
ddl/: users.sql
src/: main.rs
src/middleware/: auth.rs
src/models/: user.rs
src/oauth/: google.rs
src/repositories/: user.rs
src/routers/: debug.rs  mod.rs  oauth.rs  whoami.rs
src/services/: jwt.rs
src/state/: app.rs
